# soft-databases

./: .gitignore  docker-compose.mongo.yaml  docker-compose.mssql.yaml  exam_ideas  exam_ideas.md  package-lock.json  package.json
.github/actions/setup-rust/: action.yaml
.github/workflows/: graph-database-assignment.yaml
assignment-1/: README.md
assignment-1/sql/: data_before.sql  db_v1.sql  db_v2.sql  exec_procedures.sql  published_item_indxing.sql  sp_delete_item.sql  sp_ensure_genre_link.sql  sp_find_items.sql  sp_publish_item.sql  sp_upsert_item.sql
assignment-3/: README.md  docker-compose.yml  init.sh
assignment-3/app/: package-lock.json  package.json
assignment-3/app/src/: connection.ts
assignment-3/app/src/pages/: _app.tsx  index.tsx
assignment-3/config/: mongorestore.sh
assignment-3/config/configsvr/: config.js
assignment-3/config/router/: config.js
assignment-3/config/shardsvr1/: config.js
assignment-3/config/shardsvr2/: config.js
centrality/: Cargo.toml  README.md
centrality/src/: main.rs  page_rank.rs
clustering/: Dockerfile  docker-compose.yml
graph-databases-assignment/: .env  Cargo.toml  Dockerfile  README.md  TODO.md  docker-compose.yml  neo4j.Dockerfile
graph-databases-assignment/conf/: .env.prod.template  docker-compose.yaml.template
graph-databases-assignment/src/: db.rs  main.rs
mongo/express-mongo/: .env  .eslintrc.json  index.js  package-lock.json  package.json
sql/retail-sales/: create-database.sql  insert-sample-data.sql  sp_CreateSale.sql  sp_GetTotalSalesByProduct.sql
(+2 files in other folders)
