[package]
name = "graph-databases-assignment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
neo4rs = "0.6.0"
rocket = {version = "=0.5.0-rc.3", features = ["json"]}
tokio = "1.27.0"
